...
  label: "Home",
);

const examItem = NavItem(
  page: MyExamPage(),
  icon: Icons.library_books_sharp,
  label: "Exam",
);

const faqItem = NavItem(
  page: FaqPage(),
  icon: Icons.help_outline_rounded,
  label: "FAQ",
...
